--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "three": "^0.181.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "@google/genai": "^1.30.0",
+    "openai": "^4.0.0",
     "lucide-react": "^0.555.0",
     "@react-three/fiber": "^9.4.2",
     "@react-three/drei": "^10.7.7",
